<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_white">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:layout_marginTop="23dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/my_value_24"
            android:layout_marginRight="84dp"
            android:layout_marginBottom="@dimen/my_value_24">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/l_regular"
                android:text="@string/more"
                android:textColor="@color/color_dark_green"
                android:textSize="@dimen/my_value_18" />

        </LinearLayout>
        <View
            android:id="@+id/id_view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/color_header"></View>

        <LinearLayout
            android:id="@+id/layout_updatepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_updatepassword"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_person"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="2"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/l_regular"
                    android:text="@string/profile"
                    android:textColor="@color/color_dark_green"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/my_value_16"
            android:background="@color/color_header"></View>


        <LinearLayout
            android:id="@+id/layout_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/image_profile"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_setting"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_weight="2"
                android:gravity="left"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/l_regular"
                    android:text="@string/setting"
                    android:textColor="@color/color_dark_green"
                    android:textSize="16sp" />


            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/my_value_16"
            android:background="@color/color_header"></View>

    </LinearLayout>

</LinearLayout>